[Add] Agregando manual en la pagina de inicio

--- a/index.html
+++ b/index.html
@@ -36,24 +36,36 @@
   <!-- About Section -->
   <section id="about" class="about-section text-center">
     <div class="container">
+      <h2 class="text-white mb-4">¿Cómo reservar?</h2>
       <div class="row">
-        <div class="col-lg-8 mx-auto">
-          <h2 class="text-white mb-4">¿Cómo reservar?</h2>
-          <p class="text-white-50">Paso 1: Entra al calendario en el siguiente enlace para poder ver los laboratorios y
-            su disponibilidad.
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">Click aqui</a>.</p>
 
-          <p class="text-white-50">Paso 2:</p>
-
-          <p class="text-white-50">Paso 3:</p>
-
-          <p class="text-white-50">Paso 4:</p>
-
+        <div class="col-md-4 mb-3 mb-md-0">
+            <img src="/img/calendario.jpg" alt="calendario">
+          <p class="text-white-50">Paso 1: Entra al calendario en el siguiente enlace para poder ver los laboratorios y su disponibilidad.
+            <a href="http://startbootstrap.com/template-overviews/grayscale/">Click aqui</a></p>
+          </article>
         </div>
+
+        <div class="col-md-4 mb-3 mb-md-0">
+            <img src="/img/calendarioZoom.jpg" alt="calendariozoom">
+          <p class="text-white-50">Paso 2: Al entrar al calendario podras observar en una esquina los colores verde, amarilo y rojo que te indican la disponibilidad del laboratorio y tambien podras filtras los horarios para cada laboratorio (L1,L2 y L3).
+          </p>
+        </div>
+
+        <div class="col-md-4 mb-3 mb-md-0">
+            <img src="/img/click.jpg" alt="calendariozoom">
+          <p class="text-white-50">Paso 3:Para reservar simplemente da click sobre el horario de laboratorio
+            disponible
+            y simplemente se te pedira que confirmes la reserva y listo!
+          </p>
+        </div>
+
       </div>
-      <!-- <img src="img/ipad.png" class="img-fluid" alt="">-->
+
     </div>
   </section>
+
+
 
   <!-- Projects Section 
   <section id="projects" class="projects-section bg-light">
