--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,21 +9,51 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Dei</title>
+  <title>Grayscale - Start Bootstrap Theme</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css" rel="stylesheet">
-  <!--icons library-->
-  <link rel="stylesheet" href="/fonts/font-awesome-4.7.0/css/font-awesome.min.css">
-  <script src="https://kit.fontawesome.com/238772c3c0.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body id="page-top">
 
   <!-- Navigation -->
-  <div id="navbar-frame"></div>
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="/img/deiL.png" alt="dei"></a>
+      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#page-top">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#">Reserva</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#signup">Contacto</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="/login.html">Iniciar Sesión</a>
+          </li>
+          <div class="disabled">
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger"  href="#logout">
+                  Cerrar Sesion
+            </a>
+          </li>
+        </div>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <!-- Header -->
   <header class="masthead">
@@ -79,7 +110,6 @@
   <!-- Projects Section 
   <section id="projects" class="projects-section bg-light">
     <div class="container">
-
        Featured Project Row 
       <div class="row align-items-center no-gutters mb-4 mb-lg-5">
         <div class="col-xl-8 col-lg-7">
@@ -92,7 +122,6 @@
           </div>
         </div>
       </div>
-
   </section>-->
 
 
@@ -190,7 +219,7 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.js"></script>
-  <script src="js/nav.js"></script>
+  <script src="https://kit.fontawesome.com/238772c3c0.js" crossorigin="anonymous"></script>
 
 </body>
 
