--- a/login.html
+++ b/login.html
@@ -49,18 +49,18 @@
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
 					<div class="wrap-input100 validate-input" data-validate="Enter username">
-						<input class="input100" type="text" name="username" placeholder="Usuario">
+						<input class="input100" type="text" name="username" placeholder="Usuario" id="carnet_field">
 						<span class="focus-input100" data-placeholder="&#xe82a;"></span>
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña">
+						<input class="input100" type="password" name="pass" placeholder="Contraseña" id="password_field">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn">
-							Entrar!
+						<button class="login100-form-btn" id="submit_btn">
+							<a class = "clickBigger" href="index.html">Entrar!</a>
 						</button>
 					</div>
 
