--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Login V16</title>
+	<title>Inicia Sesion</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -20,24 +20,29 @@
 </head>
 
 <body>
-<!--Nav-->
-	<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
 		<div class="container">
-			<a class="navbar-brand js-scroll-trigger" href="index.html"><img src="/img/deiL.png" alt="DEI logo"></a>
-
-			<div class="collapse navbar-collapse" id="navbarResponsive">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="/index.html">Inicio</a>
-					</li>
-
-					<li class="nav-item">
-						<a class="nav-link js-scroll-trigger" href="/index.html#signup">Contacto</a>
-					</li>
+		  <a class="navbar-brand js-scroll-trigger" href="/index.html"><img src="/img/deiL.png" alt="dei"></a>
+		  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			Menu
+		  </button>
+		  <div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+			  <li class="nav-item">
+				<a class="nav-link js-scroll-trigger" href="/index.html">Inicio</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link js-scroll-trigger" href="/calendar.html">Reserva</a>
+			  </li>
+			  <li class="nav-item">
+				<a class="nav-link js-scroll-trigger" href="/index.html#signup">Contacto</a>
+			  </li>
 			</div>
 			</ul>
+		  </div>
 		</div>
-	</nav>
+	  </nav>
 
 <!--Login Form-->
 	<div class="limiter">
@@ -72,7 +77,8 @@
 
 	<div id="dropDownSelect1"></div>
 	<script src="js/login.js"></script>
-
+	<script src="vendor/jquery/jquery.min.js"></script>
+	<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
