[Fix] : Fixing Links

--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
   <footer class="bg-black small text-center text-white-50">
     <div class="container">
       <div class="logos">
-        <a href="https://www.facebook.com/azureknightsgaming/photos/a.242670865937784/726160854255447/?type=3&theater" class="fab fa-facebook-f fb"></a>
-        <a href="https://twitter.com/nextaldana?lang=es" class="fab fa-twitter tw"></a>
-        <a href="https://github.com/BryOrellana/ProyectoPW" class="fab fa-github git"></a>
+        <a href="https://www.facebook.com/azureknightsgaming/photos/a.242670865937784/726160854255447/?type=3&theater" target="_blank" class="fab fa-facebook-f fb"></a>
+        <a href="https://twitter.com/nextaldana?lang=es" class="fab fa-twitter tw" target="_blank"></a>
+        <a href="https://github.com/BryOrellana/ProyectoPW" class="fab fa-github git" target="_blank"></a>
       </div>
 
       <p>Copyrights&copy;Departamento de electrónica e informática, UCA.</p>
