[Fix]: Agregando Cambios En Calendario e Indice

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img src="/img/calendario.jpg" alt="calendario" id="uno">
           <p class="text-white-50">Paso 1: Entra al calendario en el siguiente enlace para poder ver los laboratorios y
             su disponibilidad.
-            <a href="http://startbootstrap.com/template-overviews/grayscale/">Click aqui</a>. ¡Recuerda que tienes que
+            <a href="/calendar.html">Click aqui</a>. ¡Recuerda que tienes que
             haber iniciado sesion!</p>
           </article>
         </div>
