--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css" rel="stylesheet">
+  <script src="/js/login.js"></script>
 
 </head>
 
@@ -39,10 +40,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#signup">Contacto</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item login">
             <a class="nav-link js-scroll-trigger" href="/login.html">Iniciar Sesión</a>
           </li>
-          <div class="disabled">
+          <div class="logout">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger"  href="#logout">
                   Cerrar Sesion
@@ -103,26 +104,6 @@
 
     </div>
   </section>
-
-
-
-  <!-- Projects Section 
-  <section id="projects" class="projects-section bg-light">
-    <div class="container">
-       Featured Project Row 
-      <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-        <div class="col-xl-8 col-lg-7">
-          <img class="img-fluid mb-3 mb-lg-0" src="img/deiL.png" alt="">
-        </div>
-        <div class="col-xl-4 col-lg-5">
-          <div class="featured-text text-center text-lg-left">
-            <h4>Shoreline</h4>
-            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-          </div>
-        </div>
-      </div>
-  </section>-->
-
 
   <!-- Signup Section -->
   <section id="signup" class="signup-section">
@@ -219,6 +200,7 @@
   <!-- Custom scripts for this template -->
   <script src="js/grayscale.js"></script>
   <script src="https://kit.fontawesome.com/238772c3c0.js" crossorigin="anonymous"></script>
+
 
 </body>
 
