--- a/login.html
+++ b/login.html
@@ -64,8 +64,8 @@
 					</div>
 
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn" id="submit_btn">
-							<a class = "clickBigger" href="index.html">Entrar!</a>
+						<button class="login100-form-btn" type="button">
+							<a class = "clickBigger" href="/index.html" id="submit_btn" >Entrar!</a>
 						</button>
 					</div>
 
