--- a/changePassword.html
+++ b/changePassword.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Inicia Sesion</title>
+	<title>Password Change</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -33,8 +33,14 @@
 				<a class="nav-link js-scroll-trigger" href="/index.html">Inicio</a>
 			  </li>
 			  <li class="nav-item">
-				<a class="nav-link js-scroll-trigger" href="/index.html#signup">Contacto</a>
+				<a class="nav-link js-scroll-trigger" href="/calendar.html">Reserva</a>
 			  </li>
+			  <li class="nav-item">
+				<a class="nav-link js-scroll-trigger" href="/index.html#signup">Contacto</a>
+              </li>
+              <li class="nav-item">
+                    <a class="nav-link js-scroll-trigger" href="/login.html">Login</a>
+                </li>
 			</div>
 			</ul>
 		  </div>
@@ -43,10 +49,10 @@
 
 <!--Login Form-->
 	<div class="limiter">
-		<div class="container-login100" style="background-image: url('img/loginFondo.jpg');">
+		<div class="container-login100" style="background-image: url('img/silverLaptop.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
 				<span class="login100-form-title p-b-41">
-					Accede a tu cuenta!
+					Cambia tu contraseña
 				</span>
 				<form class="login100-form validate-form p-b-33 p-t-5">
 
@@ -56,18 +62,21 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Enter password">
-						<input class="input100" type="password" name="pass" placeholder="Contraseña" id="password_field">
+						<input class="input100" type="password" name="actPass" placeholder="Contraseña Actual" id="password_field">
+						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
+                    </div>
+                    
+                    <div class="wrap-input100 validate-input" data-validate="Enter password">
+						<input class="input100" type="password" name="newPass" placeholder="Contraseña Nueva" id="new_password_field">
 						<span class="focus-input100" data-placeholder="&#xe80f;"></span>
 					</div>
 
-					<div>
-						<a class ="forgot" id="forgot" href="changePassword.html">Olvidaste tu contraseña?</a>
-					</div>
-
-
 					<div class="container-login100-form-btn m-t-32">
-						<button class="login100-form-btn" type="button">
-							<a class = "clickBigger" href="/index.html" id="submit_btn" >Entrar!</a>
+						<button class="login100-form-btn" id="submit_btn">
+							<a class = "clickBigger" href="index.html">Enviar</a>
+                        </button>
+                        <button class="login100-form-btn" id="cancel_btn">
+							<a class = "clickBigger" href="login.html">Cancelar</a>
 						</button>
 					</div>
 
