--- a/calendar.html
+++ b/calendar.html
@@ -67,7 +67,7 @@
                 </div>
                 <div class="colorDiv">
                     <div class="yellow"></div>
-                    <div class="text">Pendiente</div>
+                    <div class="text">En proceso</div>
                 </div>
                 <div class="colorDiv">
                     <div class="red"></div>
@@ -76,7 +76,7 @@
 
             </div>
 
-            
+
             <!--Checkbox's-->
             <div class="checkboxes">
                 <div class="check">
@@ -103,7 +103,6 @@
             </div>
         </div>
     </main>
-
 
       <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
