--- a/changePassword.html
+++ b/changePassword.html
@@ -47,7 +47,7 @@
 		</div>
 	  </nav>
 
-<!--Login Form-->
+<!--Change Password Form-->
 	<div class="limiter">
 		<div class="container-login100" style="background-image: url('img/silverLaptop.jpg');">
 			<div class="wrap-login100 p-t-30 p-b-50">
@@ -75,6 +75,7 @@
 						<button class="login100-form-btn" id="submit_btn">
 							<a class = "clickBigger" href="index.html">Enviar</a>
                         </button>
+                        <!--boton de cancelar-->
                         <button class="login100-form-btn" id="cancel_btn">
 							<a class = "clickBigger" href="login.html">Cancelar</a>
 						</button>
