--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <a class="nav-link js-scroll-trigger" href="#signup">Contacto</a>
           </li>
           <li class="nav-item login">
+              <a class="nav-link js-scroll-trigger" href="/register.html">Regístrate</a>
+            </li>
+          <li class="nav-item login">
             <a class="nav-link js-scroll-trigger" href="/login.html">Iniciar Sesión</a>
           </li>
           <div class="logout">
@@ -62,8 +65,8 @@
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
         <h1 class="mx-auto my-0 text-uppercase">Laboratorios DEI</h1>
-        <h2 class="text-white-50 mx-auto mt-2 mb-5">Reserva los laboratorios del departamento de manera mas comoda y
-          rapida:)</h2>
+        <h2 class="text-white-50 mx-auto mt-2 mb-5">Reserva los laboratorios del departamento de manera mas cómoda y
+          rápida:)</h2>
         <a href="#about" class="btn btn-primary js-scroll-trigger">¿Cómo reservar?</a>
       </div>
     </div>
